--- a/estilo.css
+++ b/estilo.css
@@ -1,12 +1,14 @@
-*{
+* {
     margin: 0;
 }
+
 body {
     background-image: url(img/fundo.jpg);
     background-size: cover;
     overflow: hidden;
 }
-.fundo{
+
+.fundo {
     font-family: Arial, Helvetica, sans-serif;
     text-align: center;
     background-color: rgba(0, 0, 0, 0.767);
@@ -14,6 +16,7 @@ body {
     color: white;
     height: 100vh;
 }
+
 .subtitulo {
     font-size: 20px;
     font-weight: bold;
@@ -21,10 +24,35 @@ body {
     letter-spacing: 2px;
     margin-top: 10px;
     margin-bottom: 10px;
-    color: black;
 }
+
 .destaque {
     color: black;
     background-color: white;
     width: 400px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 20px;
+    margin-top: 20px;
+}
+
+.titulo {
+    font-size: 70px;
+    font-family:
+    font-weight: 700;
+    font-style: normal;
+    letter-spacing: 1px;
+}
+
+.botao{
+    border:2px solid white;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    padding-left: 20px;
+    padding-right: 20px;
+    color: white;
+    font-size: 15px;
+    font-family: Arial;
+    font-weight: 700;
+    text-decoration: none;
 }
